# timetable

./: Cargo.toml  README.md  classrooms.json  frontend-6a959b8f0e20e7c1.js  frontend-6a959b8f0e20e7c1_bg.wasm  frontend-78c23b8f59c02659.js  frontend-78c23b8f59c02659_bg.wasm  frontend-b447e2e9bf5342e9.js  frontend-b447e2e9bf5342e9_bg.wasm  index.html  main_programs.json  style-d16399ff5f1207d8.css  style-eb55f9b7fa2396ee.css  subjects.json
docs/: frontend-c7fe4ca13d007986_bg.wasm  index.html  style-55d945115e3db209.css
docs/static/: classrooms.json  entries.json  main_programs.json  programs.json
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: database.rs  main.rs  utils.rs
frontend/src/components/: app.rs  calendar.rs  entry_box.rs  header.rs  mod.rs  subject_abbr_container.rs  subject_select_container.rs  timetable.rs
frontend/src/logic/: bindings.rs  date.rs  entries.rs  mod.rs  visibility.rs
scraper/: Cargo.toml
scraper/src/: main.rs  programs_teachers_classrooms.rs  subjects_entries.rs  work_free_days.rs
shared/: Cargo.toml
shared/src/: data.rs  db.rs  definitions.rs  lib.rs  time.rs
static/: classrooms.json  entries.json  main_programs.json  programs.json  subjects.json  teachers.json  work_free_days.json
